--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -190,14 +190,14 @@ body{
 
 
 .content .left{
-    width: 880px;
+    width: 815px;
     min-height: 410px;
     float: left;
     padding: 10px 10px 10px 0px;
 }
 
 .content .right{
-    width: 245px;
+    width: 310px;
     min-height: 410px;
     float: left;
     padding: 0px 10px 10px 10px;
@@ -208,6 +208,21 @@ body{
 .content .right h2{
     color: #fff;
     margin-top: 5px;
+}
+
+.content .right .item{
+    width: 290px;
+    min-height: 50px;
+    margin-bottom: 10px;
+    padding: 10px;
+    overflow: hidden;
+    background: #8f8f8f;
+}
+
+.content .right .item h3{
+    margin-top: 0px;
+    margin-bottom: 5px;
+    color: #009300;
 }
 
 .wrapper .footer {
