--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -142,6 +142,29 @@ body{
     color: #229508;
     margin-bottom: 5px;
     margin-top: 10px;
+    width: 600px;
+    float: left;
+}
+
+.content .submenu{
+    width: 320px;
+    height: 20px;
+    padding: 10px 5px 5px 5px;
+    margin-top: 10px;
+    margin-right: 5px;
+    float: right;
+    text-align: right;
+}
+
+.content .submenu a{
+    text-decoration: none;
+    font-size: 13px;
+    margin-right: 10px;
+    color: #3385D6;
+}
+
+.content .submenu a:hover{
+    color: #349df4;
 }
 
 .content form td{
@@ -173,11 +196,47 @@ body{
 }
 
 .content form .input-long{
-    width: 350px
+    width: 350px;
 }
 
 .content form .small-input{
     width: 30px;
+}
+
+.content .table{
+    width: 1100px;
+    margin: auto;
+}
+
+.content table th{
+    padding: 5px 10px 5px 10px;
+    text-align: left;
+}
+
+.content table td{
+    padding: 5px
+}
+
+.content table .longtd{
+    width: 350px
+}
+
+.content table .icontd{
+    width: 80px;
+    text-align: center;
+}
+
+table .icontd img{
+    margin-right: 10px;
+}
+
+.content table .middletd{
+    width: 130px;
+}
+
+.content table .numbertd{
+    width: 80px;
+    text-align: center;
 }
 
 .error{
@@ -187,7 +246,6 @@ body{
     padding-left: 20px;
     display: block;
 }
-
 
 .content .left{
     width: 815px;
@@ -213,14 +271,14 @@ body{
 .content .right .item{
     width: 290px;
     min-height: 50px;
-    margin-bottom: 10px;
-    padding: 10px;
+    margin-bottom: 4px;
+    padding: 5px 10px 5px 10px;
     overflow: hidden;
     background: #8f8f8f;
 }
 
 .content .right .item h3{
-    margin-top: 0px;
+    margin-top: -5px;
     margin-bottom: 5px;
     color: #009300;
 }
