Exportování článků Dokončeno ukládání formátů do databáze

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -235,6 +235,10 @@ a:visited{
     text-align: center;
 }
 
+.content li{
+    list-style-type: none;
+}
+
 table .icontd img{
     margin-right: 10px;
 }
